Move FCS/Fable to web worker and clean code

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,12 @@
 
 $body-size: 14px;
 
-@import 'node_modules/bulma/bulma';
+@import '~bulma/bulma';
+@import '~bulma-pageloader';
 @import './menu-group';
 
-$fa-font-path: "./../../../node_modules/font-awesome/fonts/";
-@import './../../../node_modules/font-awesome/scss/font-awesome';
+$fa-font-path: "~font-awesome/fonts/";
+@import '~font-awesome/scss/font-awesome';
 
 $tabs-header-height: 42px;
 
