--- a/style.css
+++ b/style.css
@@ -13039,5 +13039,6 @@ html {
         height: calc(100% - 42px); }
       .page-content .main-content .output-container iframe {
         width: 100%;
-        height: calc(100% - 42px); }
+        height: calc(100% - 42px);
+        background-color: white; }
 
