Fix and improve feedback on compilation success/fail
Issue #27

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import './monaco-editor-hover-content.sass';
 @import '../../node_modules/bulma-pageloader/dist/css/bulma-pageloader.sass';
 @import './menu-group';
+@import './toast.scss';
 
 $fa-font-path: "~font-awesome/fonts/";
 @import '~font-awesome/scss/font-awesome';
