Both scroll and tooltip works + convert code editors to tab usage

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -42,6 +42,7 @@ $button-color: $text;
 $tabs-toggle-link-border-style: none;
 $tabs-toggle-link-active-background-color: $gray-darker;
 $tabs-toggle-link-hover-background-color: $text;
+$tabs-toggle-link-hover-background-color: $gray-darker;
 
 $label-color: $text;
 
@@ -49,4 +50,4 @@ $menu-item-hover-color: $text-color;
 $menu-item-hover-background-color: $gray-darker;
 
 // custom
-$resize-background: #414141;
+$resize-background: #6d6d6d;
