Add a statistics widgets and fix sidebar behavior.
New sidebar behavior make sure that "Collapse sidebar" is always at the bottom and will show a scroll if the widget list is too big.

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -49,5 +49,8 @@ $label-color: $text;
 $menu-item-hover-color: $text-color;
 $menu-item-hover-background-color: $gray-darker;
 
+$table-background-color: $dark;
+$table-color: $text;
+
 // custom
 $resize-background: #6d6d6d;
