Use plain color for $gray-darker

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -3,7 +3,7 @@ $primary: #1e1e1e;
 $success: #73c991;
 $danger: #c74e39;
 $dark: #252526;
-$gray-darker: rgba(128, 128, 128, 0.2);
+$gray-darker: #383838;
 $text-color: #d4d4d4;
 
 @import '~bulma/sass/utilities/_all.sass';
