Restrict access to desktop platform only

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -26,6 +26,7 @@ $link-active-border: lighten($text, 50);
 $link-hover-border: lighten($text, 50);
 
 $subtitle-color: $text;
+$title-color: $text;
 $navbar-item-color: $text;
 
 $card-background-color: $dark;
