Fix visual glitch when hovering a button in the sidebar
When we have a field with two addons a button and a button is-text, we had a visual glitch where the right border of the first button was hidden.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,6 +26,14 @@ html {
     }
 }
 
+.field.has-addons {
+    .control.is-expanded {
+        .button {
+            border-left-color: #dbdbdb;
+        }
+    }
+}
+
 .page-content {
     height: calc(100vh - #{$navbar-height});
     width: 100%;
