Use flex to size the editors
This allow us to remove nested absolute position in the problem panel

--- a/src/style/problems.scss
+++ b/src/style/problems.scss
@@ -1,9 +1,6 @@
 .problems-panel {
-    margin: 0;
-    position: absolute;
     overflow: visible;
-    bottom: 0;
-    width: 100%;
+    position: relative;
 
     .problems-container {
         background-color: #fff0f0;
