--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -106,27 +106,18 @@ html {
             z-index: 1000;
         }
 
-        .editor-container {
-            height: 100%;
+        .vertical-panel {
+            display: flex;
+            flex-grow: 1;
+            flex-direction: column;
 
-            .card {
-
-                .card-header {
-                    cursor: pointer;
-                }
-
-                .card-content {
-                    padding: 0;
-                    height: calc(100% - 3em); // Compensate the line-height: 1.5; of the header
-
-                    .editor-fsharp,
-                    .editor-html {
-                        height: 100%;
-                    }
-
-                }
+            .tabs {
+                min-height: 42px;
             }
 
+            .react-editor {
+                flex-grow: 1;
+            }
         }
 
         .collapse-control {
@@ -135,17 +126,36 @@ html {
         }
 
         .output-container {
-            height: 100%;
+            display: flex;
+            flex-direction: column;
 
-            .editor-output {
-                height: calc(100% - #{$tabs-header-height});
+            .output-content {
+
+                .tabs {
+                    min-height: 42px;
+                }
+
+                display: flex;
+                flex-grow: 1;
+                flex-direction: column;
+
+                .editor-output {
+                    // min-height: calc(100% - #{$tabs-header-height});
+
+                }
+
+                .react-editor {
+                    flex-grow: 1;
+                }
+
+                iframe {
+                    width: 100%;
+                    // height: calc(100% - #{$tabs-header-height});
+                    flex: 1 1 0%;
+                    background-color: white;
+                }
             }
 
-            iframe {
-                width: 100%;
-                height: calc(100% - #{$tabs-header-height});
-                background-color: white;
-            }
         }
     }
 }
