--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,7 +35,7 @@ html {
 }
 
 .page-content {
-    height: calc(100vh - #{$navbar-height});
+    height: 100vh;
     width: 100%;
     display: flex;
 
@@ -47,12 +47,57 @@ html {
 
         &.is-expanded {
             width: 250px;
+
+            .actions-area {
+                display: flex;
+                justify-content: space-evenly;
+            }
+
+            .widgets-list .action-button {
+                height: $icon-dimensions-large;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+            }
+        }
+
+        .brand {
+            height: $icon-dimensions-large;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: .5rem;
+            padding-bottom: .5rem;
+            box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+
+            img {
+                width: 32px;
+            }
+
+            h4 {
+                text-align: center;
+                width: 50%;
+            }
+        }
+
+        .actions-area {
+            box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+        }
+
+        &.is-collapsed {
+            .widgets-list .action-button {
+                height: $icon-dimensions-large;
+                width: $icon-dimensions-large;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+            }
         }
 
         .widgets-list {
             overflow-y: auto;
             flex: 1 1 0%;
-            max-height: calc(100vh - #{$navbar-height} - 42px);
+            max-height: calc(100vh - #{$navbar-height} - $icon-dimensions-large);
         }
 
         .item {
@@ -62,7 +107,7 @@ html {
 
                 .item-content {
                     display: block;
-                    transform: translate3d(42px, -42px, 0);
+                    transform: translate3d($icon-dimensions-large, -$icon-dimensions-large, 0);
                     position: fixed;
                     z-index: 2;
                 }
