Mutualize scrollable panel logic + add console panel

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,7 +5,7 @@
 @import '../../node_modules/bulma-switch/dist/css/bulma-switch.sass';
 @import './menu-group';
 @import './toast.scss';
-@import './problems.scss';
+@import './scrollable-panel.scss';
 
 $fa-font-path: "~font-awesome/fonts/";
 @import '~font-awesome/scss/font-awesome';
