Add "word-break: break-all" CSS rule to console panel rows

--- a/src/style/scrollable-panel.scss
+++ b/src/style/scrollable-panel.scss
@@ -82,6 +82,7 @@
 
         .scrollable-panel-body-row-description {
             white-space: pre-wrap;
+            word-break: break-all;
         }
 
     }
