--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,6 @@
 @import './_variables';
 @import '~bulma/bulma';
 @import './monaco-editor-hover-content.sass';
-@import '../../node_modules/bulma-pageloader/dist/css/bulma-pageloader.sass';
 @import '../../node_modules/bulma-switch/dist/css/bulma-switch.sass';
 @import './menu-group';
 @import './toast.scss';
@@ -23,6 +22,22 @@ html {
             padding-top: 0;
             margin-top: 3.25rem;
         }
+    }
+}
+
+// is-loading on any element, from https://github.com/jgthms/bulma/issues/847#issuecomment-314110630
+div.is-loading {
+    position: relative;
+    pointer-events: none;
+    opacity: 0.5;
+    &:after {
+        @include loader;
+        position: absolute;
+        top: calc(50% - 2.5em);
+        left: calc(50% - 2.5em);
+        width: 5em;
+        height: 5em;
+        border-width: 0.25em;
     }
 }
 
