--- a/src/style/scrollable-panel.scss
+++ b/src/style/scrollable-panel.scss
@@ -96,7 +96,7 @@
     &.is-problem {
 
         .scrollable-panel-body:empty:after {
-            content: "No problems detected in your project";
+            content: "No problem detected in your project";
         }
 
         .scrollable-panel-body-row  {
