Upgrade deps to their latest version. Fix #91

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,7 @@
 @import '~bulma/bulma';
 @import './monaco-editor-hover-content.sass';
 @import '~bulma-switch/dist/css/bulma-switch.sass';
-@import '~bulma-tooltip/dist/css/bulma-tooltip.sass'; 
+@import '~bulma-tooltip/src/sass/index'; 
 @import './menu-group';
 @import './toast.scss';
 @import './scrollable-panel.scss';
