--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,7 @@
 @import '~bulma/bulma';
 @import './monaco-editor-hover-content.sass';
 @import '~bulma-switch/dist/css/bulma-switch.sass';
-@import '~bulma-tooltip/src/sass/index'; 
+@import '~bulma-tooltip/src/sass/index';
 @import './menu-group';
 @import './toast.scss';
 @import './scrollable-panel.scss';
@@ -92,7 +92,7 @@ div.is-loading {
             padding-top: .5rem;
             padding-bottom: .5rem;
             box-shadow: -1px 0px 1px 0px #f2f2f2;
-            z-index: 10; // Make sure to display the shadow in expanded/collapsed 
+            z-index: 10; // Make sure to display the shadow in expanded/collapsed
 
             img {
                 width: 32px;
@@ -253,11 +253,17 @@ div.is-loading {
                 color: $warning;
                 text-align: center;
             }
-            
+
             .reset-confirmation-modal-content-foot {
                 margin-top: 1rem;
             }
         }
-        
+
+    }
+}
+
+.options {
+    select {
+        color: black;
     }
 }
